# solder-ui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  backlight.c  backlight.h  idf_component.yml  main.c  ui_about_screen.c  ui_about_screen.h  ui_ch_settings_screen.c  ui_ch_settings_screen.h  ui_display_screen.c  ui_display_screen.h  ui_init.c  ui_init.h  ui_main_screen.c  ui_main_screen.h  ui_nvs.c  ui_nvs.h  ui_profile_edit_screen.c  ui_profile_edit_screen.h  ui_profiles_screen.c  ui_profiles_screen.h  ui_settings_screen.c  ui_settings_screen.h  ui_sleep_screen.c  ui_sleep_screen.h  ui_sound_screen.c  ui_sound_screen.h  ui_strings.c  ui_strings.h  ui_sub_screen.c  ui_sub_screen.h  ui_theme.c  ui_theme.h  ui_units_screen.c  ui_units_screen.h
main/fonts/: fonts.h  montserrat_cyrillic_12.c  montserrat_cyrillic_14.c  montserrat_cyrillic_16.c  montserrat_cyrillic_24.c  montserrat_cyrillic_32.c  montserrat_cyrillic_48.c  montserrat_cyrillic_72.c  montserrat_cyrillic_96.c  roboto_120.c  roboto_160.c  roboto_48.c  roboto_cyrillic_12.c  roboto_cyrillic_14.c  roboto_cyrillic_16.c  roboto_cyrillic_24.c  roboto_pm_32.c
